fix(stylesheet): set width and spacing of `#root`

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 #root {
-	max-width: 1280px;
+	padding: 1rem;
 	margin: 0 auto;
-	padding: 2rem;
+	width: 100%;
+	max-width: 1024px;
 	text-align: center;
 
 	display: grid;
@@ -19,6 +20,7 @@
 #display {
 	grid-area: display;
 	margin-bottom: .5rem;
+	text-align: right;
 }
 
 #equals {
